CHANGES: UPDATED tag shortcode for beter responsiveness

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -43,6 +43,7 @@
 }
 .wp-ulike-pro-profile-custom-info {
     display: flex;
+    flex-direction: column;
 }
 
 /*interessierte liker in einer Post*/
