CHANGES: UPDATED tag shortcode for beter responsiveness ADDED filter to link to the membersite instead of the usersite

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -11,6 +11,12 @@
     display: none;
 }
 
+
+.member-message-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 15px;
+}
 .single-wall article > .ct-comments{
     padding-top: 20px;
 }
