--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -1,5 +1,17 @@
 /*Kommentar Überschrift ausblenden*/
 
+body.pending .page-title:before{
+    content: 'Jetzt beitreten!';
+    color:red;
+    display: block;
+    text-align: right;
+}
+.entry-card.pending{
+    background-color:blanchedalmond;
+}
+.entry-card.founded{
+    background-color:lightcyan;
+}
 .single-wall #reply-title,.single-wall .ct-comments-title,.single-wall .comment-form-cookies-consent{
     display:none;
 }
@@ -218,23 +230,62 @@ article.entry-card.type-wall .plg-wrapper{
 .like-group-box{
     display: grid;
     column-gap: 4px;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: minmax(48px, 96px)  minmax(20%,80%)  auto;
+
 }
-.rpi-wall-group-likers{
+.rpi-wall-group-likers, .rpi-wall-group-members{
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 0 0 0 20px;
+    position: relative;
+    overflow: hidden;
 }
+.rpi-wall-group-likers:before, .rpi-wall-group-members:before{
+    transform: rotate(-90deg);
+    position: absolute;
+    left: -39px;
+    top: 39px;
+    padding: 0 12px;
+    line-height: 19px;
+    font-size: 14px;
+    height: 22px;
+}
+.single-wall .rpi-wall-group-members:before {
+    content: 'beigetreten';
+}
+.single-wall .rpi-wall-group-likers:before{
+    content: 'interessiert';
+}
+.pending .rpi-wall-group-likers li{
+    opacity: 0.3;
+}
+.like-group-box .group-member.my_avatar img{
+     border-style: dotted;
+     border-color: red;
+ }
+
 .like-btn-wrapper {
-    border: 1px solid #ccc;
-    border-radius: 50%;
     display: grid;
+    border: 1px solid orangered;
+    border-radius: 50%;
     grid-template-columns: 1fr auto;
-    max-height: 85px;
-    padding: 20px 7px;
-    box-shadow: 1px 2px 9px 1px #ccc;
+    max-height: 90px;
+    padding: 25px 7px;
+    box-shadow: 1px 2px 9px 1px #aaaaaa;
 }
+.like-btn-wrapper.founded{
+    box-shadow: none;
+    background-color: #C8B6EC;
+    border-color: #C8B6EC;
+}
+.like-btn-wrapper .closed{
+    box-shadow: none;
+    background-color: #ccc;
+    border-color: #ccc;
+}
+
 .like-btn-wrapper .rpi-wall-like-button{
     max-height: 36px;
     height: auto;
@@ -244,7 +295,7 @@ article.entry-card.type-wall .plg-wrapper{
     min-width: 36px;
     height: auto;
     margin-left: 10px;
-    border: 2px solid #fff;
+
 }
 .like-group-box .rpi-wall-counter {
     padding: 0 10px;
@@ -257,4 +308,9 @@ article.entry-card.type-wall .plg-wrapper{
 }
 .group-member {
     margin-right: -20px;
+    margin-bottom: -30px;
+}
+.gruppe.pending .gruppe-header{
+    border-top: 5px solid orangered;
+    border-bottom: 5px solid orangered;
 }
