--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -86,6 +86,16 @@ article.entry-card{
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 15px;
 }
+@media only screen and (max-width: 1300px) {
+    .member-message-grid{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media only screen and (max-width: 900px) {
+    .member-message-grid{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
 .single-wall article > .ct-comments{
     padding-top: 20px;
 }
