CHANGES: ADDED new funktion to set read messages as read

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -391,3 +391,7 @@ article.entry-card.type-wall .plg-wrapper{
     border-top: 5px solid orangered;
     border-bottom: 5px solid orangered;
 }
+
+.message .unread{
+    font-weight: bold;
+}
