--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -103,10 +103,12 @@ article.entry-card {
 .member-tags {
     display: flex;
     flex-wrap: wrap;
+    margin: 30px 0;
+    column-gap: 40px;
 }
 
 .member-tags ul {
-    display: flex;
+    /*display: flex;*/
     flex-wrap: wrap;
     margin-right: 20px;
     padding-inline-start: 0px;
@@ -117,7 +119,9 @@ article.entry-card {
     margin: 0 10px 0 0;
     padding: 0;
 }
-
+.tags-selector{
+    margin-top: 40px;
+}
 .member-message-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
