--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -562,3 +562,67 @@ article.entry-card.type-wall .plg-wrapper {
 .member-card-tags p{
     margin-bottom: 5px;
 }
+
+
+
+/**
+ * Edit Forms
+ */
+
+.acf-field[data-name="post_title"]  input[type="text"]{
+    font-size: 30px;
+}
+.fea-submit-button.button.button-primary{
+    background-color: orange;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+.fea-modal {
+    display:none;
+    position:fixed;
+    z-index:100000;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    overflow:auto;
+    background-color:rgb(0,0,0);
+    background-color:rgba(0,0,0,0.4)
+}
+.fea-modal-inner {
+    width:100%
+}
+.fea-modal-content {
+    position:relative;
+    display:flex;
+    justify-content:center;
+    background-color:#ccc;
+    margin:10% auto;
+    padding:20px;
+    border:1px solid #888;
+    width: 750px!important;
+}
+
+.close-modal {
+    color:#98b256;
+    position:absolute;
+    top:0;
+    right:0;
+    font-size:28px;
+    font-weight:bold
+}
+.rtl.close {
+    left:10px;
+    right:auto
+}
+.close:hover,
+.close:focus {
+    color:black;
+    text-decoration:none;
+    cursor:pointer
+}
+.show {
+    display:block
+}
