--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -626,3 +626,32 @@ article.entry-card.type-wall .plg-wrapper {
 .show {
     display:block
 }
+
+
+/* MODAL */
+.animated.zoomIn{
+    background: rgba(0,0,0, 0.7) !important;
+}
+.modal-wrapper {
+    margin: 50px auto;
+    max-width: 800px;
+    background: #fff;
+    padding: 10px 40px;
+    border-radius: 5px;
+}
+.modal-wrapper .acf-fields > .acf-field{
+    border-top: 0;
+}
+#btn-close-modal{
+    text-align: right;
+    display: block;
+}
+#btn-close-modal button{
+    border-radius: 50%;
+    margin-right: -38px;
+    margin-top: -9px;
+    border: 2px solid #c0c0c0;
+    background-color: white;
+    padding: 5px 13px;
+    color: #999;
+}
