CHANGES: UPDATED toolbar design ADDED Groupgoal to toolbar

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -600,6 +600,18 @@ article.entry-card.type-wall .plg-wrapper {
     display:block
 }
 
+
+.toolbar-header{
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
+
+.toolbar-header h4{
+    padding: 15px 0;
+    background-color: white;
+}
+
 .group-toolbar-grip {
 
     display: grid;
@@ -612,17 +624,32 @@ article.entry-card.type-wall .plg-wrapper {
     margin: 10px;
     padding: 10px;
     background: white;
+    border-radius: 15px;
 }
+
 .toolbar-button {
     box-shadow: 2px 2px 2px -1px #555;
 }
 .toolbar-edit-button{
     margin: 10px;
+    width: 75px;
 }
-.toolbar-protocols{
+.toolbar-edit-button span {
+    padding-top: 3px;
+}
+.toolbar-details{
+    display: grid;
+    grid-template: "protocol goals" ;
+}
+.toolbar-protocols, .toolbar-group-goal{
+    grid-area: protocol;
     display: grid;
     margin: 10px;
 }
+.toolbar-group-goal{
+    grid-area: goals;
+}
+
 
 /* MODAL */
 .animated.zoomIn{
