--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -103,6 +103,12 @@ article.entry-card {
     margin-left: 20px;
 }
 
+.single-member .entry-header .user-matrixId {
+    margin-top: -30px;
+    max-width: 500px;
+    text-align: center;
+}
+
 .member-tags {
     display: flex;
     flex-wrap: wrap;
@@ -601,6 +607,7 @@ article.entry-card.type-wall .plg-wrapper {
 }
 
 
+
 .toolbar-header{
     color: white;
     font-weight: bold;
@@ -610,6 +617,7 @@ article.entry-card.type-wall .plg-wrapper {
 .toolbar-header h4{
     padding: 15px 0;
     background-color: white;
+
 }
 
 .group-toolbar-grip {
@@ -650,6 +658,15 @@ article.entry-card.type-wall .plg-wrapper {
     grid-area: goals;
 }
 
+body.toolbar #wpadminbar{
+    display: none;
+}
+.toolbar .acf-label label{
+    font-size: 18px;
+}
+.toolbar .acf-label .description{
+    font-size: 13px;
+}
 
 /* MODAL */
 .animated.zoomIn{
