CHANGES: UPDATED dashicon of edit button UPDATED layout of group tab of pin page UPDATED CSS rules

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -638,6 +638,11 @@ article.entry-card.type-wall .plg-wrapper {
     width: 100%;
 }
 
+.group-tab-matrix-detail{
+    text-align: center;
+    margin-bottom: 25px;
+}
+
 .toolbar-header{
     color: white;
     font-weight: bold;
