--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -1,7 +1,9 @@
 /* Pinnwand Header */
-.rpi-wall-tutorial-header{
-    background-color: white;
-    border-radius: 2px;
+
+.rpi-wall-tutorial-header {
+    box-shadow: 2px 2px 7px #444;
+    border-radius: 3px;
+    background-color: wheat;
     margin: 15px 0;
     padding: 15px;
 }
@@ -803,6 +805,12 @@ body.toolbar #wpadminbar{
 }
 .rpi-wall-filter[open] .rpi-wall-tag-cloud{
     padding: 10px;
+    background: #3a90ff;
+
+}
+.rpi-wall-categories {
+    padding-top: 10px;
+    background: #3a90ff;
 }
 .rpi-wall-categories ul {
     display: inline-flex;
@@ -811,11 +819,12 @@ body.toolbar #wpadminbar{
 }
 .rpi-wall-categories ul li{
     padding-right: 20px;
+
 }
 .rpi-wall-filter[open]{
     display: contents;
 }
-summary {
+.rpi-wall-filter summary {
     background: #686868;
     display: inline flow-root list-item;
     padding: 5px 28px;
@@ -823,7 +832,10 @@ summary {
     box-shadow: 1px 1px 2px #000;
     font-weight: bold;
 }
-summary:hover{
+.rpi-wall-filter summary:hover{
     background: orangered;
 
+}
+.rpi-wall-tag-cloud a{
+    margin: 2px 15px;
 }
