--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -2,8 +2,33 @@
 
 :root {
     --ci-basis: var(--paletteColor1);
+    --ci-sub-box-background-color: #0203047a;
+    --ci-sub-box-font-color: white;
     --ci-alert-color: orangered;
+    --ci-notification-color: orange;
+    --ci-success-color:rgba(0,100,0,0.5);
     --ci-box-shadow: 2px 2px 7px #444;
+    --ci-tutorial-notification: wheat;
+    --ci-accent-color:#00C886;
+
+    --ci-secondary-button:#686868;
+    --ci-secondary-button-hover: var(--palleteColor6);
+}
+
+/* Farben Override mit Blocksy Variablen */
+:root{
+    --ci-background: var(--selectionBackground);
+
+    --ci-link: var(--paletteColor1);
+    --ci-link-hover: var(--paletteColor2);
+
+    --ci-text: var(--paletteColor3);
+    --ci-headline: var(--paletteColor4);
+
+    --ci-button: var(--buttonInitialColor);
+
+    --ci-accent-color: var(--paletteColor6);
+
 }
 
 /* Pinnwand Header */
@@ -12,7 +37,7 @@
 .rpi-wall-tutorial-header {
     box-shadow: var(--ci-box-shadow);
     border-radius: 3px;
-    background-color: wheat;
+    background-color: var(--ci-tutorial-notification);
     margin: 15px 0;
     padding: 15px;
 }
@@ -21,7 +46,7 @@
 }
 
 .pin-title-icon.pin svg{
-    background: #00C886;
+    background: var(--ci-accent-color);
     fill: white;
     margin-right: 10px;
     border-radius: 0 0 5px 5px;
@@ -33,7 +58,7 @@
     padding:7px;
 }
 .pin-title-icon.group svg{
-     background: #00C886;
+     background: var(--ci-accent-color);
      fill: white;
      margin-right: 10px;
      border-radius: 0 0 5px 5px;
@@ -50,7 +75,7 @@
 
 body.pending #group .page-title:before {
     content: 'Jetzt beitreten!';
-    color: red;
+    color: var(--ci-alert-color);
     display: block;
     text-align: left;
 }
@@ -103,14 +128,14 @@ article.entry-card {
 */
 
 .ready .pin-title-icon.group svg {
-    background: orange;
+    background: var(--ci-notification-color);
 }
 
 .pending .pin-title-icon.group svg {
-    background: orangered;
+    background: var(--ci-alert-color);
 }
 .founded .pin-title-icon.group svg {
-    background: rgba(0,100,0,0.5);
+    background: var(--ci-success-color);
 }
 article.founded label svg{
     fill: #ffffff;
@@ -119,16 +144,16 @@ article.founded label svg{
  }
 
 article.ready label[for="tab-group"]{
-    background: orange;
+    background: var(--ci-notification-color);
 }
 article.pending label[for="tab-group"]{
-    background: orangered;
+    background: var(--ci-alert-color);
 }
 article.founded label[for="tab-group"]{
-    background: rgba(0,100,0,0.5);
+    background: var(--ci-success-color);
 }
 .tabset > input:checked + label[for="tab-group"]{
-    background: #02C887FF;
+    background: var(--ci-accent-color);
 }
 
 .single-wall #reply-title, .single-wall .ct-comments-title, .single-wall .comment-form-cookies-consent {
@@ -172,9 +197,9 @@ article.founded label[for="tab-group"]{
 .single-member .meta-author img {
     height: 100px !important;
     width: auto;
-    border: 10px solid blueviolet;
+    border: 10px solid var(--ci-accent-color);
     border-radius: 50%;
-    background-color: orange;
+    background-color: var(--ci-notification-color);
 }
 
 .single-member .ct-meta-element-author {
@@ -424,6 +449,7 @@ article.entry-card.type-wall .plg-wrapper {
     display: grid;
     justify-content: right;
     margin-top: 30px;
+    margin-bottom: 45px;
 }
 
 .toolbar-content .rpi-wall-buttons {
@@ -438,7 +464,7 @@ article.entry-card.type-wall .plg-wrapper {
 }
 
 .modal-button.render-form {
-    background-color: darkorange !important;
+    background-color: var(--ci-notification-color) !important;
     padding: 10px 30px !important;;
     color: #fff !important;
     font-weight: bold;
@@ -839,20 +865,22 @@ body.toolbar #wpadminbar{
     margin-top: -44px;
 }
 .rpi-wall-filter {
-    color: white;
+    color: var(--ci-sub-box-font-color);
     display: ruby;
 }
 .rpi-wall-filter a{
-    color: white;
+    color: var(--ci-sub-box-font-color);
 }
 .rpi-wall-filter[open] .rpi-wall-tag-cloud{
     padding: 10px;
-    background: #3a90ff;
+    background:var(--ci-sub-box-background-color);
+    border-radius: 5px;
 
 }
 .rpi-wall-categories {
     padding-top: 10px;
-    background: #3a90ff;
+    background: var(--ci-sub-box-background-color);
+    border-radius: 5px;
 }
 .rpi-wall-categories ul {
     display: inline-flex;
@@ -867,15 +895,15 @@ body.toolbar #wpadminbar{
     display: contents;
 }
 .rpi-wall-filter summary {
-    background: #686868;
+    background: var(--ci-secondary-button);
     display: inline flow-root list-item;
     padding: 5px 28px;
     border-radius: 5px;
-    box-shadow: 1px 1px 2px #000;
+    box-shadow: var(--ci-box-shadow);
     font-weight: bold;
 }
 .rpi-wall-filter summary:hover{
-    background: orangered;
+    background: var(--ci-secondary-button-hover);
 
 }
 .rpi-wall-tag-cloud a{
